I added an h2 tag that says I'm excited to be in class. -BF

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <h1>Hello! My name is Brittney, and I'm excited to be taking SDEV 255 (:</h1>
+  <h1>Hello! My name is Brittney</h1>
+  <h2>I'm excited to be taking SDEV 255 (:</h2>
   <script src="script.js"></script>
 </body>
 
