Added an h3 tag saying that this will be added to github. -BF

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <h1>Hello! My name is Brittney</h1>
   <h2>I'm excited to be taking SDEV 255 (:</h2>
+  <h3>This will be added to my GitHub</h3>
   <script src="script.js"></script>
 </body>
 
