Added a p tag that says I am now using VSCode to edit. -BF

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
   <h1>Hello! My name is Brittney</h1>
-  <h2>I'm excited to be taking SDEV 255 (:</h2>
+  <h2>I'm excited to be taking SDEV 255</h2>
   <h3>This will be added to my GitHub</h3>
+  <p>Now I am editing this in VSCode!</p>
   <script src="script.js"></script>
 </body>
 
